refactor: OrderService 리팩터링